fixing images on mobile

--- a/themes/mintheme/static/css/main.less
+++ b/themes/mintheme/static/css/main.less
@@ -225,3 +225,6 @@ img {
 /*
  * Useful styles
  */
+.image-full-width {
+    width: 100%;
+}
